--- a/mainapp/templates/user.html
+++ b/mainapp/templates/user.html
@@ -11,14 +11,26 @@
 <form action="/user/login" method="post">
     <input name="phone" placeholder="手机号"><br>
     <input type="password" name="passwd" placeholder="口令"><br>
-    <button>登录</button> <a href="#">没有账号？先去注册</a>
+    <button>登录</button>
+    <a href="#">没有账号？先去注册</a>
+    <div id="val_info"></div>
 </form>
-
 <script>
+    function $(id) {
+        return document.getElementById(id)
+    }
+
     // 设置表单提交的函数
     document.forms[0].onsubmit = function (ev) {
-        console.log(this);
-        alert(this)
+        if (!/\d{11}/.this(this.phone.value)) {
+            $('val_info').innerHTML = '手机号必须是11位';
+            return false
+        }
+        if (!/\w{6,}/.this(this.passwd.value)) {
+            $('val_info').innerHTML = '口令是包含数字和字母至少是11位'
+            return false
+        }
+        $('val_info').innerHTML = ''
     }
 </script>
 </body>
