--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>$Title$</title>
+    <title>主页</title>
 </head>
 <body>
-$END$
+
 </body>
 </html>
