--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -7,6 +7,7 @@
     <title>主页</title>
 </head>
 <body>
-
+<h1>主页</h1>
+<h3><a href="{{ url_for('userBlue.modify') }}">修改个人信息</a></h3>
 </body>
 </html>
