--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -17,17 +17,11 @@
 <body>
 <h1>主页</h1>
 <p>
-    <img class="circle-img"
-         title="点击图片更改"
-         onclick="selectImg()"
-         src="/static/{% if user.photo %}{{ user.photo }}{% else %} /static/images/2.png{% endif %}">
+    <img class="circle-img" id="photoImg" title="点击图片更改" onclick="selectImg()" src="/static/{% if user.photo %}{{ user.photo }}{% else %} /static/images/2.png{% endif %}">
 </p>
-<input type="file"
-       id="selectFile"
-       style="display: none"
-       onchange="upload(this.files[0])">
+<input type="file" id="selectFile" style="display: none" onchange="upload(this.files[0])">
 <h3><a href="{{ url_for('userBlue.modify') }}">修改个人信息</a></h3>
-
+{##}
 <script>
     function $(domID) {
         return document.getElementById(domID)
@@ -38,9 +32,34 @@
             $('selectFile').click()
         }
     }
+
     function upload(file) {
-        alert(file.name);
-        console.log(file)
+        {# alert(file.name); #}
+        {# console.log(file) #}
+        if (file.type.startsWith('image/')) {
+                if (file.size <= 1024 * 1024 * 8) {
+                let url = "{{ url_for('userBlue.upload_photo') }}";
+                let request = new XMLHttpRequest();
+                request.open('post',url,true);
+                request.onload = function (ev) {
+                    if (request.status == 200 && request.readyState == 4) {
+                        respText=request.responseText;
+                        respJson=JSON.parse(respText);
+
+                        console.log(respText, respJson);
+                        $('photoImg').src='/static/'+respJson.path
+                    }
+                };
+                let formdata = new FormData();
+                formdata.append('photo',file);
+                {# 发送请求 #}
+                request.send(formdata)
+            } else {
+                alert('上传的图片在2M以内')
+            }
+        } else {
+            alert('只限制图片上传')
+        }
     }
 </script>
 </body>
